# Neuroplastic

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
agents/: __init__.py  base.py  policy.py  recurrent_policy.py  specialisation.py
analysis/: __init__.py  aggregate.py  experiment.py  interpret.py  specialisation_analysis.py  statistics.py  topology_analysis.py
communication/: __init__.py  adaptive.py  channel.py  graph.py  message.py  protocol.py  statistics.py  topology.py
configs/: __init__.py  adaptive.yaml  default.yaml  loader.py  plastic.yaml  schema.py
configs/ablations/: dense_static_baseline.yaml  no_communication.yaml  no_plasticity.yaml  static_topology.yaml
configs/baselines/: base.yaml  fully_connected.yaml  no_comm.yaml  sparse.yaml
core/: __init__.py  logging_utils.py  registry.py  seeding.py  types.py
docs/: architecture.md  benchmark_results.md  experiment_plan.md  long_horizon_results.md
environments/: __init__.py  base.py  benchmarks.py  pettingzoo_env.py  random_rollout.py  registry.py  wrappers.py
evaluation/: __init__.py  coordination.py  evaluator.py  graph_metrics.py  information_metrics.py  report.py  stability.py
plasticity/: __init__.py  base.py  hebbian.py  homeostasis.py  modulation.py  plastic_edges.py
scripts/: compare_communication.py  evaluate_run.py  run_benchmark.py  run_long_horizon.py  visualise_run.py
tests/: test_adaptive.py  test_benchmark.py  test_channel.py  test_config.py  test_environments.py  test_evaluation.py  test_graph.py  test_imports.py  test_long_horizon.py  test_metrics.py  test_plasticity_edges.py  test_registries.py  test_training.py  test_visualisation.py
training/: __init__.py  algorithms.py  benchmark.py  callbacks.py  cli.py  compare.py  learner.py  logger.py  rollout.py  trainer.py  utils.py
visualisation/: __init__.py  benchmark_figures.py  dashboards.py  dynamics.py  graphs.py  run_figures.py
